[project]
name = "droid-metric"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "droid-slam",
    "evo>=1.34.1",
    "gdown>=5.2.0",
    "html4vision>=0.6.1",
    "lietorch",
    "matplotlib>=3.10.8",
    "metric3d",
    "mmcv>=2.2.0",
    "mmengine>=0.10.7",
    "numpy==1.26.1",
    "open3d>=0.19.0",
    "opencv-python>=4.11.0.86",
    "plyfile>=1.1.3",
    "psutil>=7.2.1",
    "py3-wget>=1.0.13",
    "pyyaml>=6.0.3",
    "scipy>=1.15.3",
    "tensorboard>=2.20.0",
    "timm>=1.0.23",
    "torch==2.5.1",
    "torch-scatter>=2.1.2",
    "torchvision>=0.20.1",
    "tqdm>=4.67.1",
    "xformers>=0.0.29.post1",
]

[tool.uv.extra-build-dependencies]
torch-scatter = ["torch==2.5.1"]
droid-slam = ["torch==2.5.1", "numpy", "jinja2"]
lietorch = ["torch==2.5.1", "numpy", "jinja2"]

[tool.uv.workspace]
members = [
    "modules/droid_slam",
    "modules/droid_slam/thirdparty/lietorch",
    "modules/metric3d",
]

[tool.uv.sources]
droid-slam = { workspace = true }
lietorch = { workspace = true }
metric3d = { workspace = true }
